Configurado a visualizaçao e busca das rotas; Colcado a visualizaçao da MapBox para os trajetos.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
+<div class="container">
+    <div class="mt-3">
       <h1 class="display-6"> Olá, tudo bem? </h1>
       <p class="lead">
         Aqui você encontrará dados sobre o transporte publico de Farroupilha-RS.</p>
     </div>
-  </div>
+      
+    <a class="btn btn-main" [routerLink]="['/routes']">
+        Consultar as Rotas
+    </a>
+</div>
