--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -3,8 +3,10 @@
     <div class="btn navbar-brand">
       <i tabindex="0" (keyup.space)="menu.toggle()" (click)="menu.toggle()" class="fa fa-bars mr-2"></i>
       
-      <img src="assets/img/logo.svg" width="30" height="30" class="d-inline-block align-top ml-3 mr-2" alt="">
-      Intinerari
+      <a class="navbar-brand" [routerLink]="['/']">
+        <img src="assets/img/logo.svg" width="30" height="30" class="d-inline-block align-top ml-3 mr-2" alt="">
+        Intinerari
+      </a>
     </div>
     
     <iti-menu #menu>
@@ -14,9 +16,10 @@
     </iti-menu>
 
     <div class="dropleft show navbar-nav">
-      <a class="nav-item nav-link d-none-xs" href="#"> IFRS - Farroupilha </a>
+      <a class="nav-item nav-link d-none-xs" href="https://ifrs.edu.br/farroupilha/"> IFRS - Farroupilha </a>
     </div>
 
   </div>
 </nav>
-<hr class="border-second w-100 my-0" >
+
+<iti-loading> </iti-loading>
