--- a/src/app/shared/components/menu/menu-item/menu-item.component.html
+++ b/src/app/shared/components/menu/menu-item/menu-item.component.html
@@ -1,13 +1,11 @@
+<a class="btn btn-outline-main w-100 my-2" (click)="onClickButton()">
 
-    <a class="dropdown-item btn" 
-        (click)="onClickButton()">
-        
-        <div class="ml-0 row col-12 mr-4">
-            <div class="ml-0 col-2">
-                <i class="fa {{icon}} mr-1" aria-hidden="true"></i>
-            </div>
-            <div class="col-6">
-                {{ nomeItem }}
-            </div>
+    <div class="ml-0 row">
+        <div class="col-2">
+            <i class="fa {{icon}} mr-1" aria-hidden="true"></i>
         </div>
-    </a>
+        <div class="col-10">
+            <p class="float-left m-0"> {{ nomeItem }} </p>
+        </div>
+    </div>
+</a>
