--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,7 @@
 <div class="container">
-    <div class="mt-3">
-      <h1 class="display-6"> Olá, tudo bem? </h1>
-      <p class="lead">
-        Aqui você encontrará dados sobre o transporte publico de Farroupilha-RS.</p>
-    </div>
-      
-    <a class="btn btn-main" [routerLink]="['/routes']">
+    
+    
+    <a class="btn btn-main w-100 mt-4" [routerLink]="['/routes']">
         Consultar as Rotas
     </a>
 </div>
