--- a/src/app/routes/route-search/route-search.component.html
+++ b/src/app/routes/route-search/route-search.component.html
@@ -1,17 +1,17 @@
 <div class="col-md-12">
     <form [formGroup] = "filtrarRoutesForm" (submit)="enviar()" class="form-inline w-100 my-3">
         
-        <div class="form-group col-8">
+        <div class="form-group col-md-8">
             <input formControlName="descricao" class="form-control w-100" placeholder="Destino ou Origem" name="descricao"> 
         </div>
 
-        <div class="col-2">
-            <a class="btn btn-danger w-100" (click)="limparDados()">
+        <div class="col-md-2">
+            <a class="btn btn-danger w-100 pt-1" (click)="limparDados()">
                 Limpar
             </a>
         </div>
 
-        <div class="form-group col-2">
+        <div class="form-group col-md-2 pt-1">
             <button class="btn btn-success w-100" submit>
                 Buscar
             </button>
