--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -18,7 +18,7 @@
 
         <hr class="border-dark w-100 my-0" >
         
-        <div class="col-12 p-4">
+        <div class="col-12 p-4" (click)="toggle()">
             <ng-content></ng-content>
         </div>
 
