--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <iti-menu #menu>
          <iti-menu-item icon="fa-home" nomeItem="Home" [routerLink]="['/']"> </iti-menu-item>
          <iti-menu-item icon="fa-map-marker" nomeItem="Rotas" [routerLink]="['/routes']"> </iti-menu-item>
-         <iti-menu-item icon="fa-bus" nomeItem="Paradas" [routerLink]="['/']"> </iti-menu-item>
+         <iti-menu-item icon="fa-bus" nomeItem="Paradas" [routerLink]="['/stops']"> </iti-menu-item>
     </iti-menu>
   </div>
 </nav>
