--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="container">
-    
-    
     <a class="btn btn-main w-100 mt-4" [routerLink]="['/routes']">
         Consultar as Rotas
+    </a>
+    <a class="btn btn-main w-100 mt-1" [routerLink]="['/stops']">
+        Consultar as Paradas
     </a>
 </div>
