--- a/src/app/stops/stop-detail/stop-detail.component.html
+++ b/src/app/stops/stop-detail/stop-detail.component.html
@@ -8,7 +8,7 @@
         </div>
         <br>
         <br>
-        <h5 class="m-3"> Rota {{ route?.route_id }} - {{ route?.route_long_name }} </h5>
+        <h5 class="m-3"> Parada {{ stop?.stop_name }} </h5>
     </div>
 
     <div class="">
@@ -28,8 +28,5 @@
 
             </ng-template>
         </div>
-
-
     </div>
-
 </div>
