Criado o componente Trip-Detail e remodelado as funçoes do MapComponent

--- a/src/app/routes/routes-page/routes-page.component.html
+++ b/src/app/routes/routes-page/routes-page.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
 
+    <iti-page-location nome="Consulta de Rotas"> </iti-page-location>
+
     <iti-search #routesSearch (submit)="filtrar()" (limpar)="limpar()" > </iti-search>
 
     <iti-routes-list #routesList> </iti-routes-list>
