--- a/src/app/stops/stops-page/stops-page.component.html
+++ b/src/app/stops/stops-page/stops-page.component.html
@@ -1,6 +1,8 @@
 
 <div class="container">
 
+    <iti-page-location nome="Consulta de Paradas"> </iti-page-location>
+
     <iti-search #stopsSearch (submit)="filtrar()" (limpar)="limpar()" > </iti-search>
 
     <iti-stops-list #stopsList> </iti-stops-list>
